# test-ci-cd

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
app/: eshop.py
features/: shop.feature
features/steps/: shop_steps.py
services/: config.py  publisher.py  repository.py  service.py
tests/: conftest.py  test_case.py  test_integration.py
