[project]
name = "lab1"
version = "0.1.0"
description = ""
authors = [
    {name = "Squilix",email = "Squilix@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "behave (>=1.3.3,<2.0.0)",
    "boto3 (>=1.42.52,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
