[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["Squilix <Squilix@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
behave = "*"
boto3 = "*"
pytest = "*"
pytest-mock = "*"
coverage = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"